# backup-cards

./: .gitignore  AGENTS.md  README.md  config.yaml  justfile  main.py  pyproject.toml
docs/: api.md  technical.md
src/: config.py  main.py
src/backend/: backup.py  monitor.py  schema.py  server.py
src/frontend/: app.py  client.py  screens.py
tests/: auto_backup_test.py  e2e_test.py  log_test.py
